--- a/conda.yml
+++ b/conda.yml
@@ -7,6 +7,8 @@ dependencies:
   - pyyaml
   - hydra-core=1.3.2
   - pip=23.3.1
+  - pandas=2.1.3
+  - pytest = 8.3.3
   - pip:
       - mlflow==2.8.1
       - wandb==0.16.0
